--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,10 +8,9 @@ Test Everything:
   stage: test
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
-    - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
     - "curl -L https://releases.bazel.build/5.1.0/release/bazel-5.1.0-linux-x86_64 > bazel"
     - "chmod +x bazel"
-    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} ./bazel test --remote_cache=https://storage.googleapis.com/bazel-cache.row-major.net --google_default_credentials -- //..."
+    - "./bazel test -- //..."
 
 Upload Images:
   stage: upload-images
@@ -23,9 +22,9 @@ Upload Images:
     - "gcloud auth configure-docker gcr.io"
     - "curl -L https://releases.bazel.build/5.1.0/release/bazel-5.1.0-linux-x86_64 > bazel"
     - "chmod +x bazel"
-    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run --remote_cache=https://storage.googleapis.com/bazel-cache.row-major.net --google_default_credentials //webalator:webalator_push"
-    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run --remote_cache=https://storage.googleapis.com/bazel-cache.row-major.net --google_default_credentials //shardedcontroller:push"
-    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run --remote_cache=https://storage.googleapis.com/bazel-cache.row-major.net --google_default_credentials //rumor-mill:rumor-mill_push"
+    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //webalator:webalator_push"
+    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //shardedcontroller:push"
+    - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //rumor-mill:rumor-mill_push"
 
 Update Manifest:
   stage: update-manifest
@@ -83,6 +82,7 @@ Update Manifest:
     - kubectl kustomize manifests/production > manifests/production/rendered.yaml
     - |
       curl \
+        --fail-with-body \
         --request POST \
         --header "PRIVATE-TOKEN:${GITLAB_API_TOKEN}" \
         --form "branch=master" \
