--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ Print CI Token:
   stage: print-ci-token
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
-  - "echo ${CI_JOB_TOKEN}"
+  - "cat ${CI_JOB_TOKEN} | base64"
 
 Test Everything:
   stage: test
