--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+variables:
+  BAZEL_VERSION: "5.1.0"
+
 stages:
   - test
   - upload-images
@@ -7,20 +10,28 @@ stages:
 Test Everything:
   stage: test
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
+  cache:
+    key: "${BAZEL_VERSION}"
+    paths:
+      - "output"
   script:
-    - "curl -L https://releases.bazel.build/5.1.0/release/bazel-5.1.0-linux-x86_64 > bazel"
+    - "curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel"
     - "chmod +x bazel"
-    - "./bazel test -- //..."
+    - "./bazel --output_base=output test -- //..."
 
 Upload Images:
   stage: upload-images
   rules:
     - if: "$CI_COMMIT_MESSAGE !~ /^NO_UPLOAD_IMAGES=/m"
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
+  cache:
+    key: "${BAZEL_VERSION}"
+    paths:
+      - "output"
   script:
     - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
     - "gcloud auth configure-docker gcr.io"
-    - "curl -L https://releases.bazel.build/5.1.0/release/bazel-5.1.0-linux-x86_64 > bazel"
+    - "curl -L https://releases.bazel.build/${BAZEL_VERSION}/release/bazel-${BAZEL_VERSION}-linux-x86_64 > bazel"
     - "chmod +x bazel"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //webalator:webalator_push"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //shardedcontroller:push"
@@ -84,7 +95,7 @@ Update Manifest:
       curl \
         --fail \
         --request POST \
-        --header "PRIVATE-TOKEN:${CI_JOB_TOKEN}" \
+        --header "JOB-TOKEN: ${CI_JOB_TOKEN}" \
         --form "branch=master" \
         --form "commit_message=<commit-message.txt" \
         --form "actions[][action]=update" \
