Gitlab CI: Job token doesn't have the appropriate API access
https://gitlab.com/groups/gitlab-org/-/epics/3559 tracks making it
actually useful (OIDC token)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,7 +86,7 @@ Update Manifest:
     - |
       curl \
         --request POST \
-        --header "JOB-TOKEN: ${CI_JOB_TOKEN}" \
+        --header "PRIVATE-TOKEN: ${GITLAB_API_TOKEN}" \
         --form "branch=master" \
         --form "commit_message=<commit-message.txt" \
         --form "actions[][action]=update" \
