--- a/manifests/production/rendered.yaml
+++ b/manifests/production/rendered.yaml
@@ -146,8 +146,7 @@ spec:
       containers:
       - command:
         - /app/webalator/webalator
-        - --static-content-dir=webalator/static-content
-        - --template-dir=webalator/content
+        - --content-pack=file://webalator/row_major_content.webalator.zip
         - --listen=0.0.0.0:8080
         - --debug-listen=0.0.0.0:8081
         - --logtostderr=true
@@ -155,7 +154,7 @@ spec:
         - --enable-tracing
         - --tracing-ratio=1.0
         - --enable-metrics
-        image: gcr.io/bomsync-214520/webalator:445ac23280f44719bdce5ff85cba275e8c4e8da8
+        image: gcr.io/bomsync-214520/webalator:e9f598ff7a13970745099d27c5d1c3641491f7ee
         livenessProbe:
           httpGet:
             path: /healthz
@@ -205,7 +204,7 @@ spec:
         - --data-project=rumor-mill-prod
         - --data-dir=rumor-mill-state-prod-us-west1
         - --scrape-period=30m
-        image: gcr.io/bomsync-214520/rumor-mill:445ac23280f44719bdce5ff85cba275e8c4e8da8
+        image: gcr.io/bomsync-214520/rumor-mill:e9f598ff7a13970745099d27c5d1c3641491f7ee
         livenessProbe:
           httpGet:
             path: /healthz
@@ -258,7 +257,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: gcr.io/bomsync-214520/shardedcontroller:445ac23280f44719bdce5ff85cba275e8c4e8da8
+        image: gcr.io/bomsync-214520/shardedcontroller:e9f598ff7a13970745099d27c5d1c3641491f7ee
         name: sharded-controller
 ---
 apiVersion: extensions/v1beta1
