--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ Update Manifest:
     - kubectl kustomize manifests/production > manifests/production/rendered.yaml
     - |
       curl \
-        -v \
+        --fail \
         --request POST \
         --header "PRIVATE-TOKEN: ${GITLAB_API_TOKEN}" \
         --form "branch=master" \
