--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,8 +7,9 @@ stages:
   - update-manifest
   - deploy
 
-Test Everything:
+test-everything:
   stage: test
+  needs: []
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_TEST=/m"
       when: never
@@ -19,8 +20,9 @@ Test Everything:
     - "chmod +x bazel"
     - "./bazel test -- //..."
 
-Upload Sharded Controller Images:
+sharded-controller:upload-images:
   stage: upload-images
+  needs: ["test-everything"]
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/m"
       when: never
@@ -35,8 +37,9 @@ Upload Sharded Controller Images:
     - "chmod +x bazel"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //shardedcontroller:push"
 
-Upload Rumor Mill Image:
+rumor-mill:upload-images:
   stage: upload-images
+  needs: ["test-everything"]
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/m"
       when: never
@@ -51,8 +54,9 @@ Upload Rumor Mill Image:
     - "chmod +x bazel"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //rumor-mill:rumor-mill_push"
 
-Upload Webalator Image:
+row-major-web:upload-images:
   stage: upload-images
+  needs: ["test-everything"]
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/m"
       when: never
@@ -67,8 +71,9 @@ Upload Webalator Image:
     - "chmod +x bazel"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //webalator:webalator_push"
 
-Update Manifest:
+row-major-web:update-manifest:
   stage: update-manifest
+  needs: ["row-major-web:upload-images"]
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/m"
       when: never
@@ -76,7 +81,7 @@ Update Manifest:
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
     - |
-      cat <<EOF >manifests/production/production-images.patch.yaml
+      cat <<EOF >manifests/production/row-major-web-production-images.patch.yaml
       # This file is overwritten by CI
       apiVersion: apps/v1
       kind: Deployment
@@ -89,39 +94,14 @@ Update Manifest:
             containers:
               - name: row-major-web-content
                 image: gcr.io/bomsync-214520/webalator:${CI_COMMIT_SHA}
-      ---
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: sharded-controller
-        namespace: sharded-controller
-      spec:
-        template:
-          spec:
-            containers:
-              - name: sharded-controller
-                image: gcr.io/bomsync-214520/shardedcontroller:${CI_COMMIT_SHA}
-      ---
-      apiVersion: apps/v1
-      kind: Deployment
-      metadata:
-        name: rumor-mill
-        namespace: rumor-mill
-      spec:
-        template:
-          spec:
-            containers:
-            - name: main
-              image: gcr.io/bomsync-214520/rumor-mill:${CI_COMMIT_SHA}
       EOF
     - |
       cat <<EOF >commit-message.txt
-      Manifest update for ${CI_COMMIT_SHA}
+      Manifest update for row-major-web @ ${CI_COMMIT_SHA}
 
       NO_TEST=
       NO_UPLOAD_IMAGES=
       NO_UPDATE_IMAGES_IN_MANIFEST=
-      APPLY_MANIFEST=
       EOF
     - kubectl kustomize manifests/production > manifests/production/rendered.yaml
     - |
@@ -139,8 +119,105 @@ Update Manifest:
         --form "actions[][content]=<manifests/production/rendered.yaml" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
 
-Apply Manifest:
+rumor-mill:update-manifest:
+  stage: update-manifest
+  needs: ["rumor-mill:upload-images"]
+  rules:
+    - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/m"
+      when: never
+    - when: on_success
+  image: gcr.io/google.com/cloudsdktool/cloud-sdk
+  script:
+    - |
+      cat <<EOF >manifests/production/row-major-web-production-images.patch.yaml
+      # This file is overwritten by CI
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: rumor-mill
+        namespace: rumor-mill
+      spec:
+        template:
+          spec:
+            containers:
+            - name: main
+              image: gcr.io/bomsync-214520/rumor-mill:${CI_COMMIT_SHA}
+      EOF
+    - |
+      cat <<EOF >commit-message.txt
+      Manifest update for rumor-mill @ ${CI_COMMIT_SHA}
+
+      NO_TEST=
+      NO_UPLOAD_IMAGES=
+      NO_UPDATE_IMAGES_IN_MANIFEST=
+      EOF
+    - kubectl kustomize manifests/production > manifests/production/rendered.yaml
+    - |
+      curl \
+        --fail \
+        --request POST \
+        --header "PRIVATE-TOKEN: ${GITLAB_API_TOKEN}" \
+        --form "branch=master" \
+        --form "commit_message=<commit-message.txt" \
+        --form "actions[][action]=update" \
+        --form "actions[][file_path]=manifests/production/production-images.patch.yaml" \
+        --form "actions[][content]=<manifests/production/production-images.patch.yaml" \
+        --form "actions[][action]=update" \
+        --form "actions[][file_path]=manifests/production/rendered.yaml" \
+        --form "actions[][content]=<manifests/production/rendered.yaml" \
+        "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
+
+sharded-controller:update-manifest:
+  stage: update-manifest
+  needs: ["sharded-controller:upload-images"]
+  rules:
+    - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/m"
+      when: never
+    - when: on_success
+  image: gcr.io/google.com/cloudsdktool/cloud-sdk
+  script:
+    - |
+      cat <<EOF >manifests/production/row-major-web-production-images.patch.yaml
+      # This file is overwritten by CI
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: sharded-controller
+        namespace: sharded-controller
+      spec:
+        template:
+          spec:
+            containers:
+              - name: sharded-controller
+                image: gcr.io/bomsync-214520/shardedcontroller:${CI_COMMIT_SHA}
+      EOF
+    - |
+      cat <<EOF >commit-message.txt
+      Manifest update for sharded-controller @ ${CI_COMMIT_SHA}
+
+      NO_TEST=
+      NO_UPLOAD_IMAGES=
+      NO_UPDATE_IMAGES_IN_MANIFEST=
+      EOF
+    - kubectl kustomize manifests/production > manifests/production/rendered.yaml
+    - |
+      curl \
+        --fail \
+        --request POST \
+        --header "PRIVATE-TOKEN: ${GITLAB_API_TOKEN}" \
+        --form "branch=master" \
+        --form "commit_message=<commit-message.txt" \
+        --form "actions[][action]=update" \
+        --form "actions[][file_path]=manifests/production/production-images.patch.yaml" \
+        --form "actions[][content]=<manifests/production/production-images.patch.yaml" \
+        --form "actions[][action]=update" \
+        --form "actions[][file_path]=manifests/production/rendered.yaml" \
+        --form "actions[][content]=<manifests/production/rendered.yaml" \
+        "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
+        
+deploy-manifest:
   stage: deploy
+  needs: []
   environment:
     name: production
     url: https://row-major.net/
