--- a/manifests/production/kustomization.yaml
+++ b/manifests/production/kustomization.yaml
@@ -5,4 +5,6 @@ bases:
   - ../base
 
 patchesStrategicMerge:
-  - production-images.patch.yaml
+  - row-major-web-production-images.merge.yaml
+  - rumor-mill-production-images.merge.yaml
+  - sharded-controller-production-images.merge.yaml
