Gitlab CI: Try to fix complaints

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,7 +20,7 @@ test-everything:
     - "chmod +x bazel"
     - "./bazel test -- //..."
 
-sharded-controller:upload-images:
+sharded-controller/upload-images:
   stage: upload-images
   needs: ["test-everything"]
   rules:
@@ -37,7 +37,7 @@ sharded-controller:upload-images:
     - "chmod +x bazel"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //shardedcontroller:push"
 
-rumor-mill:upload-images:
+rumor-mill/upload-images:
   stage: upload-images
   needs: ["test-everything"]
   rules:
@@ -54,7 +54,7 @@ rumor-mill:upload-images:
     - "chmod +x bazel"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //rumor-mill:rumor-mill_push"
 
-row-major-web:upload-images:
+row-major-web/upload-images:
   stage: upload-images
   needs: ["test-everything"]
   rules:
@@ -71,9 +71,9 @@ row-major-web:upload-images:
     - "chmod +x bazel"
     - "GOOGLE_APPLICATION_CREDENTIALS=${GCP_SA_KEY_FILE} IMAGE_REPO=bomsync-214520 IMAGE_TAG=${CI_COMMIT_SHA} ./bazel run //webalator:webalator_push"
 
-row-major-web:update-manifest:
+row-major-web/update-manifest:
   stage: update-manifest
-  needs: ["row-major-web:upload-images"]
+  needs: ["row-major-web/upload-images"]
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/m"
       when: never
@@ -119,9 +119,9 @@ row-major-web:update-manifest:
         --form "actions[][content]=<manifests/production/rendered.yaml" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
 
-rumor-mill:update-manifest:
+rumor-mill/update-manifest:
   stage: update-manifest
-  needs: ["rumor-mill:upload-images"]
+  needs: ["rumor-mill/upload-images"]
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/m"
       when: never
@@ -167,9 +167,9 @@ rumor-mill:update-manifest:
         --form "actions[][content]=<manifests/production/rendered.yaml" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
 
-sharded-controller:update-manifest:
+sharded-controller/update-manifest:
   stage: update-manifest
-  needs: ["sharded-controller:upload-images"]
+  needs: ["sharded-controller/upload-images"]
   rules:
     - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPDATE_IMAGES_IN_MANIFEST=/m"
       when: never
