--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,10 +9,10 @@ stages:
 
 test-everything:
   stage: test
-  rules:
-    - if: "$CI_COMMIT_MESSAGE =~ /^NO_TEST=/m"
-      when: never
-    - when: on_success
+  # rules:
+  #   - if: "$CI_COMMIT_MESSAGE =~ /^NO_TEST=/m"
+  #     when: never
+  #   - when: on_success
   needs: []
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
@@ -22,12 +22,12 @@ test-everything:
 
 sharded-controller-upload-images:
   stage: upload-images
-  rules:
-    - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/m"
-      when: never
-    - changes:
-        - shardedcontroller/*
-      when: on_success
+  # rules:
+  #   - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/m"
+  #     when: never
+  #   - changes:
+  #       - shardedcontroller/*
+  #     when: on_success
   needs: ["test-everything"]
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
@@ -39,12 +39,12 @@ sharded-controller-upload-images:
 
 rumor-mill-upload-images:
   stage: upload-images
-  rules:
-    - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/m"
-      when: never
-    - changes:
-        - rumor-mill/*
-      when: on_success
+  # rules:
+  #   - if: "$CI_COMMIT_MESSAGE =~ /^NO_UPLOAD_IMAGES=/m"
+  #     when: never
+  #   - changes:
+  #       - rumor-mill/*
+  #     when: on_success
   needs: ["test-everything"]
   image: gcr.io/google.com/cloudsdktool/cloud-sdk
   script:
