--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,7 +120,6 @@ row-major-web/update-manifest:
       NO_UPLOAD_IMAGES=
       NO_UPDATE_IMAGES_IN_MANIFEST=
       EOF
-    - kubectl kustomize manifests/production > manifests/production/rendered.yaml
     - |
       curl \
         --request POST \
@@ -130,9 +129,6 @@ row-major-web/update-manifest:
         --form "actions[][action]=update" \
         --form "actions[][file_path]=manifests/production/row-major-web-production-images.patch.yaml" \
         --form "actions[][content]=<manifests/production/row-major-web-production-images.patch.yaml" \
-        --form "actions[][action]=update" \
-        --form "actions[][file_path]=manifests/production/rendered.yaml" \
-        --form "actions[][content]=<manifests/production/rendered.yaml" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
 
 rumor-mill/update-manifest:
@@ -183,9 +179,6 @@ rumor-mill/update-manifest:
         --form "actions[][action]=update" \
         --form "actions[][file_path]=manifests/production/rumor-mill-production-images.patch.yaml" \
         --form "actions[][content]=<manifests/production/rumor-mill-production-images.patch.yaml" \
-        --form "actions[][action]=update" \
-        --form "actions[][file_path]=manifests/production/rendered.yaml" \
-        --form "actions[][content]=<manifests/production/rendered.yaml" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
 
 sharded-controller/update-manifest:
@@ -226,7 +219,6 @@ sharded-controller/update-manifest:
       NO_UPLOAD_IMAGES=
       NO_UPDATE_IMAGES_IN_MANIFEST=
       EOF
-    - kubectl kustomize manifests/production > manifests/production/rendered.yaml
     - |
       curl \
         --fail \
@@ -237,9 +229,6 @@ sharded-controller/update-manifest:
         --form "actions[][action]=update" \
         --form "actions[][file_path]=manifests/production/sharded-controller-production-images.patch.yaml" \
         --form "actions[][content]=<manifests/production/sharded-controller-production-images.patch.yaml" \
-        --form "actions[][action]=update" \
-        --form "actions[][file_path]=manifests/production/rendered.yaml" \
-        --form "actions[][content]=<manifests/production/rendered.yaml" \
         "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/repository/commits"
         
 deploy-manifest:
@@ -258,4 +247,4 @@ deploy-manifest:
   script:
     - "gcloud auth activate-service-account --key-file=${GCP_SA_KEY_FILE}"
     - "gcloud container clusters get-credentials --project=bomsync-214520 --zone=us-west1-a taahm-primary-cluster"
-    - "kubectl apply --kustomize=manifests/production
+    - "kubectl apply --kustomize=manifests/production"
