--- a/manifests/production/rumor-mill-production-images.merge.yaml
+++ b/manifests/production/rumor-mill-production-images.merge.yaml
@@ -1,12 +1,14 @@
-# This file is overwritten by CI
+# This file is overwritten by CI.
+#
+# Refer to //infra-tools/bump-manifest to see how it is generated.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: rumor-mill
   namespace: rumor-mill
+  name: rumor-mill
 spec:
   template:
     spec:
       containers:
       - name: main
-        image: gcr.io/bomsync-214520/rumor-mill:e9f598ff7a13970745099d27c5d1c3641491f7ee
+        image: gcr.io/bomsync-214520/rumor-mill:foo
