--- a/manifests/production/row-major-web-production-images.merge.yaml
+++ b/manifests/production/row-major-web-production-images.merge.yaml
@@ -1,12 +1,14 @@
-# This file is overwritten by CI
+# This file is overwritten by CI.
+#
+# Refer to //infra-tools/bump-manifest to see how it is generated.
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: row-major-web-content-deployment
   namespace: row-major-web
+  name: row-major-web-content-deployment
 spec:
   template:
     spec:
       containers:
-        - name: row-major-web-content
-          image: gcr.io/bomsync-214520/webalator:e9f598ff7a13970745099d27c5d1c3641491f7ee
+      - name: row-major-web-content
+        image: gcr.io/bomsync-214520/webalator:b3966549e76d8d480f50f7f9eab27eb0392bca5b
