--- a/manifests/production/kustomization.yaml
+++ b/manifests/production/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
   - ../base
 
 patchesStrategicMerge:
+  - medtracker.merge.yaml
   - row-major-web-production-images.merge.yaml
   - rumor-mill-production-images.merge.yaml
   - sharded-controller-production-images.merge.yaml
